[package]
name = "logic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "logic"

[dependencies]
bevy_egui = "0.7"
bevy_prototype_lyon = "0.3.1"
rand = "0.8.4"
wasm-bindgen = "0.2"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "x11",
] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_winit",
    "render",
] }
bevy_webgl2 = "0.5"
console_error_panic_hook = "*"
